--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,17 @@
     font-size: 16px;
   }
   
+  /* Hide number input spinners */
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
+  
   /* Smooth scrolling */
   html {
     scroll-behavior: smooth;
